--- a/开发/最初的界面搭建/b.html
+++ b/开发/最初的界面搭建/b.html
@@ -6,13 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="b.css">
 </head>
 <body>
-	<div id ="d1">
-		<div id ="d2"> 
-			
-		</div>
-		<div id ="d3"> 
-			
-		</div>
+	<div class="a1"></div>
+	<div class="a1">
+		<div class="a5"></div>
+		<div class="a3"></div>
+		<div class="a3"></div>
 	</div>
+	<div class="a1">
+		<div class=a4></div>
+		<div class=a4></div>
+	</div>
+	
 </body>
 </html>
