--- a/开发/最初的界面搭建/mainpage.html
+++ b/开发/最初的界面搭建/mainpage.html
@@ -13,14 +13,15 @@
 </head>
 <body>
 <!--在这里编写你的代码-->
-  <!-- 标题栏 -->
-  <div class="am-btn am-btn-primary am-btn-block" data-am-sticky="{animation: 'slide-top'}">
+  <!-- 标题栏  编辑-添加文件-搜索-->
+  <div class="am-btn am-btn-primary am-btn-block" style="" data-am-sticky="{animation: 'slide-top'}">
         <!-- <button class="am-btn am-btn-success am-btn-block">固定到顶部动画效果</button> -->
         <a class="rzc_button1" href="#doc-oc-demo1" data-am-offcanvas>
             &nbsp;&nbsp;
             <i class="am-icon-cog"></i> 设置
         </a>
         <a style="color:white">文件</a>
+        <!-- 添加文件 -->
         <a style="color:white">          
           <div class="am-dropdown" style="float: right;" data-am-dropdown>
             <span class="am-icon-plus am-dropdown-toggle" data-am-dropdown-toggle>&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -33,11 +34,32 @@
               <li><a href="#">添加代码</a></li>
             </ul>
           </div>          
+          <!-- 搜索 -->
           <span style="float: right;" class="am-icon-search">&nbsp;&nbsp;&nbsp;&nbsp;</span>          
+          <!-- 编辑 -->
           <span style="float: right;">编辑&nbsp;&nbsp;&nbsp;&nbsp;</span>                  
         </a>        
   </div>
-  
+  <!-- 标题栏  分享-删除-复制-移动-->
+  <div class="am-btn am-btn-primary am-btn-block" style="display:none;margin:0px;" data-am-sticky="{animation: 'slide-top'}">        
+        <span style="" class="am-icon-share">分享&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>          
+        <span style="" class="am-icon-trash">删除&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+        <span style="" class="am-icon-copy">复制&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+        <span style="" class="">移动&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>       
+        <span style="" class="am-icon-close">取消&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>  
+  </div>
+  <!-- 标题栏  粘贴-->
+  <div class="am-btn am-btn-primary am-btn-block" style="display:none;height:37px;margin:0px;" data-am-sticky="{animation: 'slide-top'}">
+        <!-- <button class="am-btn am-btn-success am-btn-block">固定到顶部动画效果</button> -->
+        <a class="rzc_button1" href="#doc-oc-demo1" data-am-offcanvas>
+            &nbsp;&nbsp;
+            <i class="am-icon-cog"></i> 设置
+        </a>
+        <a style="color:white">                  
+          <!-- 编辑 -->
+          <span style="float: right;">粘贴&nbsp;&nbsp;&nbsp;&nbsp;</span>                  
+        </a>        
+  </div>
   <!-- 侧边栏内容 -->
   <div id="doc-oc-demo1" class="am-offcanvas">
     <div class="am-offcanvas-bar">
@@ -53,6 +75,7 @@
       </ul>
     </div>    
   </div>
+  <!--   显示文件和文件夹 -->
   <div class="am-list" >
     <ul class="am-list">
       <li><a href="#">&nbsp;&nbsp;<i class="am-icon-folder"></i> &nbsp;&nbsp;Folder1</a></li>
